--- a/src/scss/typography.scss
+++ b/src/scss/typography.scss
@@ -61,7 +61,7 @@ h2 {
 }
 
 h3 {
-  @include font-size-spec(fontSizeEm(42), 42, 3, 21);
+  @include font-size-spec(fontSizeEm(42), 42, 3, 37);
 }
 
 h4 {
